--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,9 @@ body{
 }
 .login {
     box-shadow: -5px 2px 54px -9px rgba(0, 0, 0, 1);
+     color: #17a2b8;
+     font-size: 28px;
+     font-weight: bold;
 }
 nav{
      box-shadow: 0px 2px 54px -9px rgba(0, 0, 0, 1);
